added encounter builder, ToP breakdown, updated resume

--- a/clone/proposal.html
+++ b/clone/proposal.html
@@ -6,15 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone!</title>
     <link rel="stylesheet" href="../css/portfolio.css">
+    <link rel="icon" type="image/x-icon" href="../media/favicon.ico">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+              <li><a href="../index.html#contact">Contact</a></li>
+              <li><a href="../index.html#about">About</a></li>
+              <li><a href="../index.html#projects">Projects</a></li>
+              <li id="name"><a href="../index.html">Henry Orsagh</a></li>
+            </ul>
+          <span class="cardending">
+        </nav>
+        <div class="middlestripe"></div>
+        <div class="lightstripe"></div>
+    </header>
     <h1>Clone!</h1>
     <div id="cards">
        
         
-    <div class="card"> 
-        <h2>A Tactical Dungeon Crawler by Henry Orsagh</h2>
+    <div class="card">
         <p>In Clone!, the player plays as a wizard who must use their cloning powers to defeat Shroggs and solve puzzles.</p>
+        <a href="index.html">Play it</a>
  
     <h3>Platform</h3>
     <p>Clone will be primarily a desktop web app.</p>
@@ -32,16 +46,6 @@
     <img src="clonemockup.png" alt="gameplay state" class="centered">
     <img src="clonestart.png" alt="start menu" class="centered">
 </div>
-    <div class="card"> 
-    <h3>About The Developer</h3>
-    <p>I'm Henry Orsagh, a 2nd year Game Design and Development major. I have experience with C#, C++, Javascript, Python, and Java. I'm also proficient with Unity and Unreal. I enjoy snowboarding and worldbuilding when I'm not playing or making games.</p>
-</div>
-</div>
-    <footer>
-        Made by Henry Orsagh, 2022. <br>
-        <a href="index.html">Game</a><br>
-        <a href="documentation.html">Documentation</a><br>
-        <a href="../index.html">Portfolio</a>       
-    </footer>       
+</div>    
 </body>
 </html>
