--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="media/favicon.ico">
     <script src="js/tabSwitcher.js"></script>
      
 </head>
@@ -36,8 +36,8 @@
     
     <div class="tabs">
       <button class="tablinks" onclick="openTab(event, 'design')" id="startTab">Game Design</button>
-      <button class="tablinks" onclick="openTab(event, 'software')">Software Engineering</button>
-      <button class="tablinks" onclick="openTab(event, 'web')">Web Development</button>
+      <button class="tablinks" onclick="openTab(event, 'software')">Software Development</button>
+      <!--<button class="tablinks" onclick="openTab(event, 'web')">Web Development</button>-->
     </div>
     <div id="design" class="tabcontent">
     <div class="project">
@@ -45,7 +45,7 @@
       <div class="subcard">
         <h3>The Trials of Persephone</h3>
         <i>3/2022-Present</i>
-        <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. Its a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it as a first person game.</p>
+        <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. Its a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
         <a href="trials/index.html">Deep dive</a>
       </div>
       <div class="middlestripe"></div>
@@ -108,6 +108,17 @@
 
   <div id="software" class="tabcontent">
     <div class="project">
+      <div class=projectimg><img src="media/TrialsDemoSpedUp.gif" alt="Trials of Persephone demo level"></div>
+      <div class="subcard">
+        <h3>The Trials of Persephone</h3>
+        <i>3/2022-Present</i>
+        <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. Its a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
+        <a href="trials/index.html">Deep dive</a>
+      </div>
+      <div class="middlestripe"></div>
+      <div class="lightstripe"></div>
+    </div>
+    <div class="project">
       <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/OOPMpCzd1oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       <div class="subcard">
         <h3>Croak and Dagger</h3>
@@ -117,9 +128,7 @@
       <div class="middlestripe"></div>
       <div class="lightstripe"></div>
     </div>
-  </div>
 
-  <div id="web" class="tabcontent">
     <div  class="project">
       <div class=projectimg><img src="media/clonemenu.png" alt="clone!"></div>
       <div class="subcard">
@@ -127,6 +136,17 @@
         <i>4/2022-5/2022</i>
         <p>Clone! is a web puzzle game written in JavaScript using PixiJS. It was a solo academic project. The game's core mechanic is cloning- you can use your clones as bait to move enemies into vulnerable positions. I developed and utilized multiple collision detection algorithims for this game, including AABB, circle-circle and a line trace function.</p>
         <a href="clone/index.html">Play it</a>
+      </div>
+      <div class="middlestripe"></div>
+      <div class="lightstripe"></div>
+    </div>
+    <div  class="project">
+      <div class=projectimg><img src="media/encounter-builder.png" alt="encounter builder screenshot, 4 level 4 characters vs a ancient black dragon"></div>
+      <div class="subcard">
+        <h3>D&D Encounter Builder</h3>
+        <i>4/2022</i>
+        <p>D&D Encounter Builder is a web based tool written in JavaScript for planning Dungeons & Dragons. I wrote it on my own using the Open 5e API, in about a week. It allows you to search for monsters with a number of attributes, and then select any number of them to fight your players. It then gives you an approximation for how the fight will turn out.</p>
+        <a href="encounter-builder/index.html">See it</a>
       </div>
       <div class="middlestripe"></div>
       <div class="lightstripe"></div>
@@ -146,7 +166,7 @@
     <address>
       <a href= "mailto: henry.orsagh@gmail.com"><i class="material-icons">email</i>henry.orsagh@gmail.com</a> <br>
       <a href= "tel: 5857302838"><i class="material-icons">phone</i>(585)730-2838 <br> 
-      <a href="media/HenryOrsagh2-28-23.pdf" target="_blank"><i class="material-icons">book</i>Resume</a> <br>
+      <a href="media/HenryOrsagh4-10-2023.pdf" target="_blank"><i class="material-icons">book</i>Resume</a> <br>
     </address>
 </div>
 </div>
