--- a/runesmith/index.html
+++ b/runesmith/index.html
@@ -6,6 +6,7 @@
     <title>Unity WebGL Player | WordSmith</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="icon" type="image/x-icon" href="../media/favicon.ico">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
