--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3>The Trials of Persephone</h3>
         <i>3/2022-Present</i>
         <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. Its a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
-        <a href="trials/index.html">Deep dive</a>
+        <a href="trials/index.html">Deep dive</a> - <a href="trials/devlog.html">Dev Log</a>
       </div>
       <div class="middlestripe"></div>
       <div class="lightstripe"></div>
@@ -154,7 +154,7 @@
   </div>
   </div>  
   <div class="card" id="about">
-    <div id="portrait"><img src="media/portrait.png" alt="" ></div>
+    <div class="cardimg"><img src="media/portrait.png" alt="" ></div>
     <h2>About</h2>
     <p>Hello! I am a game designer and programmer from Rochester, NY. I specialize in level design and AI and I am passionate about creating immersive, engaging, and memorable gaming experiences!</p>
     <p>As a game designer, I am always looking to invent fresh and unique game mechanics, and I fully embrace the rapid prototyping methodology. I also excel at problem solving, and I’m never afraid to think outside the box when it comes to finding a solution. I believe the best way to make a game is to start with a clear goal and constantly have the player’s psychology in mind.</p>
