--- a/index.html
+++ b/index.html
@@ -40,13 +40,24 @@
       <!--<button class="tablinks" onclick="openTab(event, 'web')">Web Development</button>-->
     </div>
     <div id="design" class="tabcontent">
+      <div class="project">
+        <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/6Ncc5ixZMTo?si=2NyuSBOF3kPe9jue" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+        <div class="subcard">
+          <h3>HACKBOX</h3>
+          <i>5/2023-Present</i>
+          <p>	HACKBOX is a “minigame compilation” mobile game I designed and developed in Unity with another student, funded by a grant from the NSA. Our goal was to create a mobile game that could encourage kids to pursue a career in cybersecurity, to help alleviate the global cybersecurity professional shortage.</p>
+          <a href="hackbox/">Learn more</a>
+        </div>
+        <div class="middlestripe"></div>
+        <div class="lightstripe"></div>
+      </div>
     <div class="project">
       <div class=projectimg><img src="media/TrialsDemoSpedUp.gif" alt="Trials of Persephone demo level"></div>
       <div class="subcard">
         <h3>The Trials of Persephone</h3>
         <i>3/2022-Present</i>
         <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. Its a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
-        <a href="trials/index.html">Deep dive</a> - <a href="trials/devlog.html">Dev Log</a>
+        <a href="trials/">Learn more</a>
       </div>
       <div class="middlestripe"></div>
       <div class="lightstripe"></div>
