--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
       <div class="lightstripe"></div>
     </div>
     <div class="project">
+      <div class=projectimg><img src="media/steelechoes.png" alt="Cover of the steel echoes core rulebook"></div>
+      <div class="subcard">
+        <h3>Steel Echoes</h3>
+        <i>9/2023-12/2023</i>
+        <p>Steel Echoes is a mechbuilding Tabletop Roleplaying Game that I designed and developed along with two other students as an academic project. Being on such a small team and with such a constrained timeframe, I had my hands in most aspects of the developement, in particular worldbuilding, character creation, and balance.</p>
+      </div>
+      <div class="middlestripe"></div>
+      <div class="lightstripe"></div>
+    </div>
+    <div class="project">
       <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/FYF6lcwtXSo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       <div class="subcard">
         <h3>The Halls</h3>
@@ -93,31 +103,20 @@
       <div class="middlestripe"></div>
       <div class="lightstripe"></div>
     </div>
-    <div  class="project">
-      <div class=projectimg><img src="media/clonemenu.png" alt="clone!"></div>
-      <div class="subcard">
-        <h3>Clone!</h3>
-        <i>4/2022-5/2022</i>
-        <p>Clone! is a web puzzle game written in JavaScript using PixiJS. It was a solo academic project. The game's core mechanic is cloning- you can use your clones as bait to move enemies into vulnerable positions. I developed and utilized multiple collision detection algorithims for this game, including AABB, circle-circle and a line trace function.</p>
-        <a href="clone/index.html">Play it</a>
-      </div>
-      <div class="middlestripe"></div>
-      <div class="lightstripe"></div>
-    </div>
-    <div class="project">
-      <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/uNuG9kNqu20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-      <div class="subcard">
-        <h3>Rune Smith</h3>
-        <i>1/2022-5/2022</i>
-        <p>Rune Smith is a turn-based Roguelite deckbuilding game that I developed in Unity using C# alongside 6 other students. I primarily worked on our rune sequencing system and our UI.</p>
-        <a href="https://people.rit.edu/hco4630/runesmith/index.html">Play it</a>
-      </div>
-      <div class="middlestripe"></div>
-      <div class="lightstripe"></div>
-    </div>
   </div>
 
   <div id="software" class="tabcontent">
+      <div class="project">
+        <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/6Ncc5ixZMTo?si=2NyuSBOF3kPe9jue" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+        <div class="subcard">
+          <h3>HACKBOX</h3>
+          <i>5/2023-Present</i>
+          <p>	HACKBOX is a “minigame compilation” mobile game I designed and developed in Unity with another student, funded by a grant from the NSA. Our goal was to create a mobile game that could encourage kids to pursue a career in cybersecurity, to help alleviate the global cybersecurity professional shortage.</p>
+          <a href="hackbox/">Learn more</a>
+        </div>
+        <div class="middlestripe"></div>
+        <div class="lightstripe"></div>
+      </div>
     <div class="project">
       <div class=projectimg><img src="media/TrialsDemoSpedUp.gif" alt="Trials of Persephone demo level"></div>
       <div class="subcard">
@@ -177,7 +176,7 @@
     <address>
       <a href= "mailto: henry.orsagh@gmail.com"><i class="material-icons">email</i>henry.orsagh@gmail.com</a> <br>
       <a href= "tel: 5857302838"><i class="material-icons">phone</i>(585)730-2838 <br> 
-      <a href="media/HenryOrsagh4-10-2023.pdf" target="_blank"><i class="material-icons">book</i>Resume</a> <br>
+      <a href="media/Orsagh_Henry_Resume_GameDev.pdf" target="_blank"><i class="material-icons">book</i>Resume</a> <br>
     </address>
 </div>
 </div>
