--- a/trials/index.html
+++ b/trials/index.html
@@ -41,7 +41,7 @@
     
     <h2>Prototyping (but better this time)</h2>
         <p>I did a lot of prototyping. I iterated through tons of different ideas, looking for mechanics that felt fun- my ideology was if it was fun without any polish, it would definitely be fun with. As I worked on it, I found that movement mechanics worked really well- something that I couldn’t pursue fully in VR, due to motion sickness. The player needing to collect mana while falling in order to save themself led to lots of tense and exciting moments, that felt incredibly gratifying to pull off. I decided to build around that feeling- where the player is moving fast, and has to think fast to keep up with their movements. It was a little too fast though, so I reduced the gravity scale slightly. I also found that the most exciting moments were when the player had no mana on hand, instead relying on collecting mana as they used it. So I decided to encourage that- I developed a mechanic where as long as the player is in the air with no mana, they have the ability to slow down time, drawing inspiration from SUPERHOT. </p>
-        <p>This is just a brief overview of what I've done for this project so far. You can find some more nitty-gritty details on my <a href="devlog.html">Dev Log</a>.</p>
+        <!--<p>This is just a brief overview of what I've done for this project so far. You can find some more nitty-gritty details on my <a href="devlog.html">Dev Log</a>.</p>-->
     </div>
     </div>
     
