--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <div class="lightstripe"></div>
       </div>
     <div class="project">
-      <div class=projectimg><img src="media/TrialsDemoSpedUp.gif" alt="Trials of Persephone demo level"></div>
+      <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/qiLuGluDV2U?si=JjqTIFzYaELVlYnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
       <div class="subcard">
         <h3>The Trials of Persephone</h3>
         <i>3/2022-Present</i>
-        <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. Its a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
+        <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. It's a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
         <a href="trials/">Learn more</a>
       </div>
       <div class="middlestripe"></div>
@@ -117,17 +117,17 @@
         <div class="middlestripe"></div>
         <div class="lightstripe"></div>
       </div>
-    <div class="project">
-      <div class=projectimg><img src="media/TrialsDemoSpedUp.gif" alt="Trials of Persephone demo level"></div>
-      <div class="subcard">
-        <h3>The Trials of Persephone</h3>
-        <i>3/2022-Present</i>
-        <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. Its a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
-        <a href="trials/index.html">Deep dive</a>
+      <div class="project">
+        <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/qiLuGluDV2U?si=JjqTIFzYaELVlYnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+        <div class="subcard">
+          <h3>The Trials of Persephone</h3>
+          <i>3/2022-Present</i>
+          <p>The Trials of Persephone is a first person spellslinger game developed in Unreal Engine 5. It's a personal project that I am developing with the help of a 3D artist. The idea started as a VR game, however in testing I found that the concept didn't play well to VR's strengths, so I remade it in first person.</p>
+          <a href="trials/">Learn more</a>
+        </div>
+        <div class="middlestripe"></div>
+        <div class="lightstripe"></div>
       </div>
-      <div class="middlestripe"></div>
-      <div class="lightstripe"></div>
-    </div>
     <div class="project">
       <div class=projectimg><iframe width="560" height="315" src="https://www.youtube.com/embed/OOPMpCzd1oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       <div class="subcard">
